Changed to rock paper scisscors to grass fire water

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    
+    <buttons>Fire</buttons>
+    <buttons>Grass</buttons>
+    <buttons>Water</buttons>
 </body>
 <script src="script.js"></script>
 </html>
