Added user interface

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <buttons>Fire</buttons>
-    <buttons>Grass</buttons>
-    <buttons>Water</buttons>
+    <div class="container">
+        <buttons class="fire">Fire</buttons>
+        <buttons class="grass">Grass</buttons>
+        <buttons class="water">Water</buttons>
+    </div>
+    <div class="outcome"></div>
 </body>
 <script src="script.js"></script>
 </html>
