Function for checking score and minor tweaks

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 </head>
 <body>
     <div class="container">
-        <buttons class="fire">Fire</buttons>
-        <buttons class="grass">Grass</buttons>
-        <buttons class="water">Water</buttons>
+        <button class="fire">Fire</button>
+        <button class="grass">Grass</button>
+        <button class="water">Water</button>
     </div>
-    <div class="outcome"></div>
+    <div class="outcome">
+        
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
