--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--CSS Stylesheet-->
+    <link rel="stylesheet" src="/styles.css">
+    <!--Website Scripts-->
     <script src="/script.js" defer></script>
     <title>Rock Paper Scissors</title>
 </head>
