--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <button id="buttons" class="grass">Grass</button>
         <button id="buttons" class="water">Water</button>
     </div>
-    <div class="reset"></div>
+    <div class="reset-container">
+        <button class="restart-btn">Again?</button>
+    </div>
     <div class="results">
         <div id="player">You:
             <span class="player-score">0</span>
