Added reset button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button id="buttons" class="water">Water</button>
     </div>
     <div class="reset-container">
-        <button class="restart-btn">Again?</button>
+        <button id="reset-btn" class="restart-btn">Again?</button>
     </div>
     <div class="results">
         <div id="player">You:
